--- a/BookDoctor.Web/Views/_ViewImports.cshtml
+++ b/BookDoctor.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 @using Microsoft.AspNetCore.Identity
+@using BookDoctor.Data.Models
 @using BookDoctor.Web
 @using BookDoctor.Web.Models
 @using BookDoctor.Web.Models.AccountViewModels
