Added AdminArea, DoctorArea, PatientArea, Services Layer

--- a/BookDoctor.Web/Views/_ViewImports.cshtml
+++ b/BookDoctor.Web/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 @using Microsoft.AspNetCore.Identity
 @using BookDoctor.Data.Models
+@using BookDoctor.Data.Models.EnumTypes
 @using BookDoctor.Web
+@using BookDoctor.Web.Infrastructure
 @using BookDoctor.Web.Models
 @using BookDoctor.Web.Models.AccountViewModels
 @using BookDoctor.Web.Models.ManageViewModels
