--- a/BookDoctor.Web/Views/Account/Register.cshtml
+++ b/BookDoctor.Web/Views/Account/Register.cshtml
@@ -12,6 +12,48 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="FirstName"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="LastName"></label>
+                <input asp-for="LastName" class="form-control" />
+                <span asp-validation-for="LastName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Birthdate"></label>
+                <input asp-for="Birthdate" class="form-control" />
+                <span asp-validation-for="Birthdate" class="text-danger"></span>
+            </div>            
+            <div class="form-group">
+                <label asp-for="Sex"></label>
+                <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Sex>()" class="form-control"></select>
+                <span asp-validation-for="Sex" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="IsDoctor"></label>
+                <br />
+                @Html.RadioButtonFor(m => m.IsDoctor, true) Yes
+                @Html.RadioButtonFor(m => m.IsDoctor, false) No
+                <span asp-validation-for="IsDoctor" class="form-text text-muted text-danger"></span>
+            </div>
+            <div class="form-group doctorInputs">
+                <label asp-for="MedicalCenterId"></label>
+                <select name="MedicalCenterId" asp-items="@Model.MedicalCenters" class="form-control"></select>
+                <span asp-validation-for="MedicalCenterId" class="text-danger"></span>
+            </div>
+            <div class="form-group doctorInputs">
+                <label asp-for="SpecialtyId"></label>
+                <select name="SpecialtyId" asp-items="@Model.Specialties" class="form-control"></select>
+                <span asp-validation-for="MedicalCenterId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Info"></label>
+                <textarea asp-for="Info" class="form-control" ></textarea>
+                <span asp-validation-for="Info" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
