--- a/BookDoctor.Web/Views/Shared/_Layout.cshtml
+++ b/BookDoctor.Web/Views/Shared/_Layout.cshtml
@@ -26,14 +26,27 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">BookDoctor.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">BookDoctor</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    @{
+                        if (User.IsInRole(WebConstants.AdministratorRole))
+                        {
+                            <li><a asp-area="@WebConstants.AdminArea" asp-controller="Admin" asp-action="Administration">Administration</a></li>
+                        }
+                        else if (User.IsInRole(WebConstants.DoctorRole))
+                        {
+                            <li><a asp-area="@WebConstants.DoctorsArea" asp-controller="Doctors" asp-action="Schedule">Schedule</a></li>
+                        }
+                        else if (User.Identity.IsAuthenticated)
+                        {
+                            <li><a asp-area="@WebConstants.PatientsArea" asp-controller="Patients" asp-action="Appointments">My Appointments</a></li>
+                        }                        
+                    }     
                 </ul>
+                
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </div>
@@ -42,7 +55,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - BookDoctor.Web</p>
+            <p>&copy; 2017 - BookDoctor</p>
         </footer>
     </div>
 
