--- a/BookDoctor.Web/wwwroot/css/site.css
+++ b/BookDoctor.Web/wwwroot/css/site.css
@@ -26,6 +26,10 @@
     margin: 15px;
 }
 
+.doctorInputs {
+    display: none;
+}
+
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
     /* Hide captions */
