Bug fixing and styling

--- a/BookDoctor.Web/Areas/Patients/Views/Patients/BookDoctor.cshtml
+++ b/BookDoctor.Web/Areas/Patients/Views/Patients/BookDoctor.cshtml
@@ -43,7 +43,7 @@
                 <textarea asp-for="Info" class="form-control"></textarea>
                 <span asp-validation-for="Info" class="text-danger"></span>
             </div>   
-            <button type="submit" class="btn btn-default">Book</button>
+            <button type="submit" class="btn btn-primary">Book</button>
         </form>
     </div>
 </div>
