--- a/BookDoctor.Web/Views/Shared/_Layout.cshtml
+++ b/BookDoctor.Web/Views/Shared/_Layout.cshtml
@@ -51,12 +51,12 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="container body-content"> 
         @RenderBody()
-        <hr />
+        @*<hr />
         <footer>
             <p>&copy; 2017 - BookDoctor</p>
-        </footer>
+        </footer>*@
     </div>
 
     <environment include="Development">
