--- a/BookDoctor.Web/wwwroot/css/site.css
+++ b/BookDoctor.Web/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 ﻿body {
+    background: url("../images/bookDoc.jpg") no-repeat top center fixed;
     padding-top: 50px;
     padding-bottom: 20px;
 }
