Deployment, booking validation bug fixed

--- a/BookDoctor.Web/Views/Home/Index.cshtml
+++ b/BookDoctor.Web/Views/Home/Index.cshtml
@@ -2,13 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="row col-lg-5" style="margin-top: 15%;">
+<h2>Book Doctor System</h2>
+<div class="row col-lg-5" style="margin-top: 5%;">
     <div class="card">
-        <h3 class="card-header">BookDoctor System</h3>
         <div class="card-block">
             <h4 class="card-title">It is about to grow!</h4>
             <p class="card-text">Here you can easily book a doctor!</p>
-            <a class="btn btn-primary btn-lg btn-block text-left" asp-area="@WebConstants.PatientsArea" asp-controller="Patients" asp-action="BookDoctor">Book Doctor</a>
+            <a class="btn btn-primary  text-left" asp-area="@WebConstants.PatientsArea" asp-controller="Patients" asp-action="BookDoctor">Book Doctor</a>
         </div>
     </div>
 </div>    
