--- a/BookDoctor.Web/Areas/Admin/Views/AdminSpecialties/All.cshtml
+++ b/BookDoctor.Web/Areas/Admin/Views/AdminSpecialties/All.cshtml
@@ -5,6 +5,9 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<a class="btn btn-primary" asp-area="@WebConstants.AdminArea" asp-controller="AdminSpecialties" asp-action="Add">New Specialty</a>
+<br />
+<br />
 <table class="table table-bordered table-hover">
     <thead>
         <tr>
