--- a/BookDoctor.Web/Views/Account/Register.cshtml
+++ b/BookDoctor.Web/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewData["Title"]</h2>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-5">
         <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
             <h4>Create a new account.</h4>
             <hr />
@@ -40,13 +40,21 @@
             </div>
             <div class="form-group doctorInputs">
                 <label asp-for="MedicalCenterId"></label>
-                <select name="MedicalCenterId" asp-items="@Model.MedicalCenters" class="form-control"></select>
+                <div class="form-inline">
+                    <select name="MedicalCenterId" asp-items="@Model.MedicalCenters" class="form-control"></select>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#medCenterModal">Add New</button>
+                    If not on the list!
+                </div>                
                 <span asp-validation-for="MedicalCenterId" class="text-danger"></span>
             </div>
             <div class="form-group doctorInputs">
                 <label asp-for="SpecialtyId"></label>
-                <select name="SpecialtyId" asp-items="@Model.Specialties" class="form-control"></select>
-                <span asp-validation-for="MedicalCenterId" class="text-danger"></span>
+                <div class="form-inline">
+                    <select name="SpecialtyId" asp-items="@Model.Specialties" class="form-control"></select>                    
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#specialtyModal">Add New</button>
+                    If not on the list!
+                </div>                
+                <span asp-validation-for="SpecialtyId" class="text-danger"></span>                
             </div>
             <div class="form-group">
                 <label asp-for="Info"></label>
@@ -70,6 +78,46 @@
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
+    </div>
+</div>
+
+<div class="modal fade" id="medCenterModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New Medical Center</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Add Medical Center</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="specialtyModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">New Specialty</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Add Specialty</button>
+            </div>
+        </div>
     </div>
 </div>
 
