Edit user functionality enabled

--- a/BookDoctor.Web/Areas/Admin/Views/Admin/Administration.cshtml
+++ b/BookDoctor.Web/Areas/Admin/Views/Admin/Administration.cshtml
@@ -5,6 +5,8 @@
 
 <h2>Administration</h2>
 
+<h3>Users</h3>
+<a class="btn btn-primary" asp-area="@WebConstants.AdminArea" asp-controller="AdminUsers" asp-action="All">Users</a>
 <h3>Medical Centers</h3>
 <a class="btn btn-success" asp-area="@WebConstants.AdminArea" asp-controller="AdminMedicalCenters" asp-action="Add">Add New Medical Center</a>
 <a class="btn btn-primary" asp-area="@WebConstants.AdminArea" asp-controller="AdminMedicalCenters" asp-action="All">Medical Centers</a>
