--- a/BookDoctor.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/BookDoctor.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using BookDoctor.Web.Infrastructure
 @using BookDoctor.Web.Areas.Admin.Models.MedicalCenter
 @using BookDoctor.Web.Areas.Admin.Models.Specialty
+@using BookDoctor.Web.Areas.Admin.Models.User
 @using BookDoctor.Services.Admin.Models.Specialty
 @using BookDoctor.Services.Admin.Models.MedicalCenter
+@using BookDoctor.Services.Admin.Models.User
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
